--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "antd-staubli",
+  "name": "antd-staubli-configurator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://brspnnggrt.github.io/toggle/build/",
+  "homepage": "https://brspnnggrt.github.io/configurator/build/",
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.4",
